# LogValCpp

./: .clang-format  .clang-tidy  CMakeLists.txt  Dependencies.cmake  README.md
include/LogValCpp/: LogVal.hpp
test/: CMakeLists.txt  logval.addition.cpp  logval.algorithm.cpp  logval.comparision.cpp  logval.conversion.cpp  logval.copy.cpp  logval.division.cpp  logval.multiplication.cpp  logval.substraction.cpp  logval.unary.cpp  tests.cpp
